--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,22 @@ body {
 .calculator {
     display: flex;
     flex-direction: column;
-    gap: .5em;
+    gap: 1em;
+    background-color: gray;
+    padding: 1em 2em 2em 2em;
+    border-radius: 10px;
+    box-shadow: 0px 9px 0px 0px rgb(197, 197, 197);
 }
 
 .calculator-display .display {
-    background-color: red;
-    height: 1em;
-    padding: 1em;
+    background-color: rgb(199, 221, 174);
+    padding: .5em;
     border-radius: 5px;
     box-sizing: border-box;
+    color: rgb(28, 28, 28);
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+
 }
 
 .calculator-buttons {
@@ -39,6 +46,21 @@ body {
     box-shadow: 0px 5px 0px 0px rgb(25, 25, 25);
 }
 
+.calculator-buttons .calculator-numbers button:hover,
+.calculator-operators button:hover {
+    background-color: rgb(94, 166, 182);
+    transform: translateY(-2px);
+    box-shadow: 0px 7px 0px 0px rgb(25, 25, 25);
+    transition: .2s;
+}
+
+.calculator-buttons .calculator-numbers button:active,
+.calculator-operators button:active {
+    transform: translateY(5px);
+    box-shadow: 0px 0px 0px 0px rgb(25, 25, 25);
+    transition: .2s;
+}
+
 .calculator-operators {
     display: flex;
     flex-direction: column;
@@ -49,5 +71,8 @@ body {
     background-color: rgb(75, 75, 75);
     color: white;
     border: none;
+    border-radius: 5px;
+    aspect-ratio: 1;
+    width: 4em;
     box-shadow: 0px 5px 0px 0px rgb(25, 25, 25);
 }
