--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@
     box-shadow: 0px 5px 0px 0px rgb(25, 25, 25);
 }
 
+
+
 .calculator-buttons .calculator-numbers button:hover,
 .calculator-operators button:hover {
     background-color: rgb(94, 166, 182);
@@ -67,14 +69,30 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
+    justify-content: space-between;
 }
 
 .calculator-operators button {
-    background-color: rgb(75, 75, 75);
+    background-color: rgb(48 48 48);
     color: white;
     border: none;
     border-radius: 5px;
     aspect-ratio: 1;
     width: 4em;
     box-shadow: 0px 5px 0px 0px rgb(25, 25, 25);
+}
+
+.decimal-button,
+.equal-button {
+    font-weight: 900;
+}
+
+
+#equal-button {
+    background-color: rgb(215 128 69);
+    grid-column: 2/4;
+}
+
+#clear-button {
+    background-color: rgb(215, 69, 69);
 }
